2004-08-07  David R. Linn  <drl@vuse.vanderbilt.edu>

	* www/formats.html: Titles for JNG and MNG were reversed.

2004-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/widget.c (XCommandWidget): Replace ImageMagick logo in
	display command menu with GraphicsMagick logo.

2004-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Released 1.1.3.

2004-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with more changes since the 1.1.2 release.
	* coders/tiff.c (ReadTIFFImage): Support reading RGB/CMYK scanline
	oriented TIFF images with arbitrary depth.

2004-08-05  Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Fixes for CERT security alert TA04-217A described
	at "http://www.us-cert.gov/cas/techalerts/TA04-217A.html".

2004-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am:  Update to Automake 1.9.

2004-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with changes since the 1.1.2 release.

2004-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff/libtiff/tif_lzw.c: Incorporated TIFF LZW compression
	support.
	* lcms: Merged in lcms 1.13 from CVS HEAD.

2004-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (CVS_BRANCH_TAG): Record the CVS branch tag that
	source package is obtained from.
	* configure.ac: Pass essential flags on down to subordinate
	configures when performing 'make distcheck'.  Support DESTDIR
	installs for PERL 5.8.1 and later, which support DESTDIR
	internally.

2004-07-09  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>

	* coders/bmp.c (ReadBMPImage): Removed if-test on reading
	red_mask, green_mask, and blue_mask.  These are only *valid*
	under certain conditions, but they are always present in the
	file.

2004-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Enable LZW compression by default.

2004-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
